--- a/gabung/v2.html
+++ b/gabung/v2.html
@@ -27,19 +27,6 @@
   .sponsor { background-color:#fffae6; border:1px solid #ffd42a; padding:12px; margin:15px 0; font-weight:bold; text-align:center; color:#b36b00; border-radius:6px; box-shadow:0 0 5px rgba(255,212,42,0.5); font-size:1rem; }
   footer { text-align:center; margin-top:25px; font-size:0.9rem; color:#888; }
   .backup-area { margin-top:25px; padding:12px; background:#fffbe6; border-radius:8px; border:1px solid #ffd42a; text-align:center; }
-  @media (max-width:720px){
-    body { padding:12px; }
-    textarea{ height:120px; }
-  }
-  @media (max-width:480px){
-    h1,h2,h3{ font-size:1rem; }
-    textarea{ height:120px; font-size:0.9rem; }
-    #output{ font-size:0.85rem; }
-    .page-btn{ padding:8px 12px; font-size:0.9rem; }
-    #copyBtn{ font-size:0.95rem; }
-    .input-buttons{ flex-direction:column; }
-    .input-buttons button{ flex:unset; width:100%; }
-  }
 </style>
 </head>
 <body>
@@ -110,22 +97,22 @@ const paginationEl = document.getElementById('pagination');
 const dropdownEl = document.getElementById('fileDropdown');
 
 /* === SISTEM ID UNIK PER PROYEK (PERSISTENT) === */
-function getProjectId() {
-  let id = localStorage.getItem('madgazan_project_id');
-  if (!id) {
-    id = 'madgazan_' + Date.now() + '_' + Math.floor(Math.random() * 100000);
-    localStorage.setItem('madgazan_project_id', id);
-  }
-  return id;
-}
-const PROJECT_ID = getProjectId();
+const PROJECT_ID_KEY = 'madgazan_project_id';
+let PROJECT_ID = localStorage.getItem(PROJECT_ID_KEY);
 
-function getStorageKey() {
+// Jika belum ada, buat Project ID baru berdasarkan nama file HTML + timestamp
+if (!PROJECT_ID) {
+  const fileName = location.pathname.split('/').pop().replace('.html', '');
+  PROJECT_ID = fileName + '_' + Date.now();
+  localStorage.setItem(PROJECT_ID_KEY, PROJECT_ID);
+  alert('🆕 ID proyek baru dibuat: ' + PROJECT_ID);
+}
+
+function getStorageKey(suffix) {
   const f = dropdownEl.value || 'default';
-  return PROJECT_ID + '_appData_' + f;
+  return `${PROJECT_ID}_appData_${f}_${suffix || ''}`;
 }
 
-/* === SIMPAN & MUAT DATA === */
 function saveAppData() {
   const key = getStorageKey();
   const data = { inputList: inputLinksEl.value, currentPage: currentPage };
@@ -139,7 +126,7 @@ function loadAppData() {
 }
 
 window.addEventListener('load', () => {
-  const savedDropdown = localStorage.getItem(PROJECT_ID + '_selectedFile');
+  const savedDropdown = localStorage.getItem(`${PROJECT_ID}_selectedFile`);
   if (savedDropdown) dropdownEl.value = savedDropdown;
   loadAppData();
   processLinks();
@@ -147,7 +134,7 @@ window.addEventListener('load', () => {
 });
 
 dropdownEl.addEventListener('change', () => {
-  localStorage.setItem(PROJECT_ID + '_selectedFile', dropdownEl.value);
+  localStorage.setItem(`${PROJECT_ID}_selectedFile`, dropdownEl.value);
   loadAppData();
   processLinks();
   showPage(currentPage);
@@ -158,7 +145,7 @@ inputLinksEl.addEventListener('input', () => {
   saveAppData();
 });
 
-/* === TOMBOL INPUT === */
+/* Tombol-tombol utama */
 document.getElementById('clearInputLinksBtn').addEventListener('click', () => {
   inputLinksEl.value = '';
   saveAppData();
@@ -194,7 +181,6 @@ document.getElementById('sortirPerTokoBtn').addEventListener('click', () => {
   alert(`Sortir selesai!\nTotal toko unik: ${hasil.length}`);
 });
 
-/* === PROSES LINK === */
 function processLinks() {
   const raw = inputLinksEl.value.split('\n').map(l => l.trim()).filter(Boolean);
   const unique = [...new Set(raw)];
@@ -240,34 +226,31 @@ function copyToClipboard() {
   navigator.clipboard.writeText(text).then(() => alert('Disalin!'));
 }
 
-/* === BACKUP & IMPORT === */
+/* Backup, Import, Reset */
 function exportLocalStorage() {
   const data = {};
-  for (let i = 0; i < localStorage.length; i++) {
-    const key = localStorage.key(i);
-    data[key] = localStorage.getItem(key);
-  }
+  Object.keys(localStorage).forEach(k => {
+    if (k.startsWith(PROJECT_ID)) data[k] = localStorage.getItem(k);
+  });
   const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
   const url = URL.createObjectURL(blob);
   const a = document.createElement('a');
   a.href = url;
-  a.download = 'madgazan_backup.json';
+  a.download = `${PROJECT_ID}_backup.json`;
   a.click();
   URL.revokeObjectURL(url);
-  alert('✅ Data berhasil disimpan ke file madgazan_backup.json');
+  alert('✅ Backup berhasil disimpan!');
 }
 function importLocalStorage() {
   const fileInput = document.getElementById('importFile');
   const file = fileInput.files[0];
   if (!file) return alert('Pilih file JSON dulu.');
   const reader = new FileReader();
-  reader.onload = function(e) {
+  reader.onload = e => {
     try {
       const data = JSON.parse(e.target.result);
-      Object.keys(data).forEach(key => {
-        localStorage.setItem(key, data[key]);
-      });
-      alert('✅ Data berhasil diimport. Reload halaman untuk melihat hasil.');
+      Object.entries(data).forEach(([k, v]) => localStorage.setItem(k, v));
+      alert('✅ Data berhasil diimport!');
       location.reload();
     } catch (err) {
       alert('❌ File tidak valid: ' + err.message);
@@ -276,14 +259,15 @@ function importLocalStorage() {
   reader.readAsText(file);
 }
 function resetLocalStorage() {
-  if (confirm('Yakin ingin menghapus semua data localStorage?')) {
-    localStorage.clear();
-    alert('Semua data localStorage telah dihapus.');
-    location.reload();
-  }
+  if (!confirm('Hapus semua data untuk proyek ini?')) return;
+  Object.keys(localStorage).forEach(k => {
+    if (k.startsWith(PROJECT_ID)) localStorage.removeItem(k);
+  });
+  alert('✅ Semua data proyek ini telah dihapus!');
+  location.reload();
 }
 
-/* === SINKRON SEMUA FILE === */
+/* Sinkron semua file TXT */
 async function syncAllFiles() {
   const options = Array.from(dropdownEl.options).filter(o => o.value);
   if (!options.length) return alert('Tidak ada file di dropdown.');
@@ -296,19 +280,23 @@ async function syncAllFiles() {
       const res = await fetch(opt.value + '?t=' + Date.now(), { cache: 'no-store' });
       if (!res.ok) throw new Error('HTTP ' + res.status);
       const text = await res.text();
-      const key = PROJECT_ID + '_appData_' + opt.value;
+      const key = `${PROJECT_ID}_appData_${opt.value}`;
       const data = { inputList: text.trim(), currentPage: 1 };
       localStorage.setItem(key, JSON.stringify(data));
       success++;
       lastText = text.trim();
       lastFile = opt.value;
-    } catch (e) { fail++; }
+      console.log(`✅ ${opt.value} berhasil disinkronkan.`);
+    } catch (e) {
+      console.warn(`❌ Gagal ambil ${opt.value}:`, e);
+      fail++;
+    }
   }
 
   if (lastText) {
     inputLinksEl.value = lastText;
     dropdownEl.value = lastFile;
-    localStorage.setItem(PROJECT_ID + '_selectedFile', lastFile);
+    localStorage.setItem(`${PROJECT_ID}_selectedFile`, lastFile);
     processLinks();
     showPage(1);
   }
