--- a/gabung/v1.html
+++ b/gabung/v1.html
@@ -33,6 +33,7 @@
 
 <h1>Produk Live MadGazan</h1>
 <h2>Manajemen Shopee Live</h2>
+<h3>v1.html - 001 version</h3>
 
 <textarea id="inputLinks" placeholder="Masukkan ribuan link produk Shopee, satu per baris..."></textarea>
 
