--- a/gabung/v3.html
+++ b/gabung/v3.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sortir Toko v3.001 - Produk Live MadGazan</title>
+<title>Sortir Toko - Produk Live MadGazan</title>
 <style>
   body { font-family: Arial, sans-serif; margin: 15px; max-width: 900px; margin-inline:auto; background-color:#fffef9; }
   h1,h2,h3 { color:#b36b00; text-align:center; }
@@ -33,8 +33,8 @@
 <body>
 
 <h1>Produk Live MadGazan</h1>
-<h2>Manajemen Shopee Live</h2>
-<h3>v1.html - 001 version</h3>
+<h2>Manajemen Shopee Live v2.html</h2>
+
 <div id="projectInfo"></div>
 
 <textarea id="inputLinks" placeholder="Masukkan ribuan link produk Shopee, satu per baris..."></textarea>
