--- a/gabung/v1.html
+++ b/gabung/v1.html
@@ -9,7 +9,6 @@
   h1,h2,h3 { color:#b36b00; text-align:center; }
   h1 { font-size:1.6rem; margin-bottom:5px; }
   h2 { font-size:1.2rem; margin-bottom:10px; }
-  #projectInfo { text-align:center; color:#444; font-size:14px; margin-top:-5px; margin-bottom:15px; }
   textarea, select { width:100%; box-sizing:border-box; font-size:1rem; padding:8px; border-radius:6px; border:1px solid #ccc; resize:vertical; }
   textarea { height:150px; }
   #output { display:none; margin-top:10px; }
@@ -28,14 +27,25 @@
   .sponsor { background-color:#fffae6; border:1px solid #ffd42a; padding:12px; margin:15px 0; font-weight:bold; text-align:center; color:#b36b00; border-radius:6px; box-shadow:0 0 5px rgba(255,212,42,0.5); font-size:1rem; }
   footer { text-align:center; margin-top:25px; font-size:0.9rem; color:#888; }
   .backup-area { margin-top:25px; padding:12px; background:#fffbe6; border-radius:8px; border:1px solid #ffd42a; text-align:center; }
+  @media (max-width:720px){
+    body { padding:12px; }
+    textarea{ height:120px; }
+  }
+  @media (max-width:480px){
+    h1,h2,h3{ font-size:1rem; }
+    textarea{ height:120px; font-size:0.9rem; }
+    #output{ font-size:0.85rem; }
+    .page-btn{ padding:8px 12px; font-size:0.9rem; }
+    #copyBtn{ font-size:0.95rem; }
+    .input-buttons{ flex-direction:column; }
+    .input-buttons button{ flex:unset; width:100%; }
+  }
 </style>
 </head>
 <body>
 
 <h1>Produk Live MadGazan</h1>
-<h2>Manajemen Shopee Live v1.html</h2>
-
-<div id="projectInfo"></div>
+<h2>Manajemen Shopee Live</h2>
 
 <textarea id="inputLinks" placeholder="Masukkan ribuan link produk Shopee, satu per baris..."></textarea>
 
@@ -99,27 +109,10 @@ const outputEl = document.getElementById('output');
 const paginationEl = document.getElementById('pagination');
 const dropdownEl = document.getElementById('fileDropdown');
 
-/* === SISTEM ID UNIK PER FILE HTML === */
-const fileName = location.pathname.split('/').pop().replace('.html', '');
-const PROJECT_ID_KEY = 'madgazan_project_id_' + fileName;
-let PROJECT_ID = localStorage.getItem(PROJECT_ID_KEY);
-
-if (!PROJECT_ID) {
-  PROJECT_ID = fileName + '_' + Date.now();
-  localStorage.setItem(PROJECT_ID_KEY, PROJECT_ID);
-  console.log('🆕 ID proyek baru dibuat:', PROJECT_ID);
-}
-
-/* === TAMPILKAN ID PROYEK DI HALAMAN === */
-document.getElementById('projectInfo').textContent = '🆔 ID Proyek Aktif: ' + PROJECT_ID;
-
-/* === KEY UNIK PER FILE TXT === */
-function getStorageKey(suffix) {
+function getStorageKey() {
   const f = dropdownEl.value || 'default';
-  return `${PROJECT_ID}_appData_${f}_${suffix || ''}`;
+  return 'appData_' + f;
 }
-
-/* === SIMPAN & MUAT DATA === */
 function saveAppData() {
   const key = getStorageKey();
   const data = { inputList: inputLinksEl.value, currentPage: currentPage };
@@ -133,7 +126,7 @@ function loadAppData() {
 }
 
 window.addEventListener('load', () => {
-  const savedDropdown = localStorage.getItem(`${PROJECT_ID}_selectedFile`);
+  const savedDropdown = localStorage.getItem('selectedFile');
   if (savedDropdown) dropdownEl.value = savedDropdown;
   loadAppData();
   processLinks();
@@ -141,7 +134,7 @@ window.addEventListener('load', () => {
 });
 
 dropdownEl.addEventListener('change', () => {
-  localStorage.setItem(`${PROJECT_ID}_selectedFile`, dropdownEl.value);
+  localStorage.setItem('selectedFile', dropdownEl.value);
   loadAppData();
   processLinks();
   showPage(currentPage);
@@ -152,7 +145,6 @@ inputLinksEl.addEventListener('input', () => {
   saveAppData();
 });
 
-/* === FUNGSI TOMBOL === */
 document.getElementById('clearInputLinksBtn').addEventListener('click', () => {
   inputLinksEl.value = '';
   saveAppData();
@@ -171,6 +163,8 @@ document.getElementById('hapusDuplikatBtn').addEventListener('click', () => {
   saveAppData();
   alert('Duplikat dihapus!');
 });
+
+/* === FUNGSI BARU: SORTIR BERDASARKAN ID TOKO === */
 document.getElementById('sortirPerTokoBtn').addEventListener('click', () => {
   const lines = inputLinksEl.value.split('\n').map(l => l.trim()).filter(Boolean);
   const tokoMap = new Map();
@@ -188,7 +182,6 @@ document.getElementById('sortirPerTokoBtn').addEventListener('click', () => {
   alert(`Sortir selesai!\nTotal toko unik: ${hasil.length}`);
 });
 
-/* === PEMROSESAN LINK & PAGINASI === */
 function processLinks() {
   const raw = inputLinksEl.value.split('\n').map(l => l.trim()).filter(Boolean);
   const unique = [...new Set(raw)];
@@ -201,9 +194,12 @@ function processLinks() {
   renderStats(raw.length, unique.length, dup);
   renderPagination();
 }
+
 function renderStats(total, uniq, dup) {
-  statsEl.textContent = `Total link diinput: ${total}\nLink unik: ${uniq}\nDuplikat dihapus: ${dup}\nTotal halaman: ${allPages.length}`;
+  statsEl.textContent =
+    `Total link diinput: ${total}\nLink unik: ${uniq}\nDuplikat dihapus: ${dup}\nTotal halaman: ${allPages.length}`;
 }
+
 function showPage(page) {
   if (!allPages.length) { outputEl.style.display = 'none'; return; }
   currentPage = page;
@@ -234,31 +230,34 @@ function copyToClipboard() {
   navigator.clipboard.writeText(text).then(() => alert('Disalin!'));
 }
 
-/* === BACKUP, IMPORT, RESET === */
+/* === Backup & Import === */
 function exportLocalStorage() {
   const data = {};
-  Object.keys(localStorage).forEach(k => {
-    if (k.startsWith(PROJECT_ID)) data[k] = localStorage.getItem(k);
-  });
+  for (let i = 0; i < localStorage.length; i++) {
+    const key = localStorage.key(i);
+    data[key] = localStorage.getItem(key);
+  }
   const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
   const url = URL.createObjectURL(blob);
   const a = document.createElement('a');
   a.href = url;
-  a.download = `${PROJECT_ID}_backup.json`;
+  a.download = 'madgazan_backup.json';
   a.click();
   URL.revokeObjectURL(url);
-  alert('✅ Backup berhasil disimpan!');
+  alert('✅ Data berhasil disimpan ke file madgazan_backup.json');
 }
 function importLocalStorage() {
   const fileInput = document.getElementById('importFile');
   const file = fileInput.files[0];
   if (!file) return alert('Pilih file JSON dulu.');
   const reader = new FileReader();
-  reader.onload = e => {
+  reader.onload = function(e) {
     try {
       const data = JSON.parse(e.target.result);
-      Object.entries(data).forEach(([k, v]) => localStorage.setItem(k, v));
-      alert('✅ Data berhasil diimport!');
+      Object.keys(data).forEach(key => {
+        localStorage.setItem(key, data[key]);
+      });
+      alert('✅ Data berhasil diimport. Reload halaman untuk melihat hasil.');
       location.reload();
     } catch (err) {
       alert('❌ File tidak valid: ' + err.message);
@@ -267,18 +266,18 @@ function importLocalStorage() {
   reader.readAsText(file);
 }
 function resetLocalStorage() {
-  if (!confirm('Hapus semua data untuk proyek ini?')) return;
-  Object.keys(localStorage).forEach(k => {
-    if (k.startsWith(PROJECT_ID)) localStorage.removeItem(k);
-  });
-  alert('✅ Semua data proyek ini telah dihapus!');
-  location.reload();
+  if (confirm('Yakin ingin menghapus semua data localStorage?')) {
+    localStorage.clear();
+    alert('Semua data localStorage telah dihapus.');
+    location.reload();
+  }
 }
 
-/* === SINKRONISASI SEMUA FILE TXT === */
+/* === FUNGSI SINKRON SEMUA FILE === */
 async function syncAllFiles() {
   const options = Array.from(dropdownEl.options).filter(o => o.value);
   if (!options.length) return alert('Tidak ada file di dropdown.');
+
   if (!confirm(`Sinkron semua file (${options.length} file)?`)) return;
 
   let success = 0, fail = 0, lastText = '', lastFile = '';
@@ -288,7 +287,7 @@ async function syncAllFiles() {
       const res = await fetch(opt.value + '?t=' + Date.now(), { cache: 'no-store' });
       if (!res.ok) throw new Error('HTTP ' + res.status);
       const text = await res.text();
-      const key = `${PROJECT_ID}_appData_${opt.value}`;
+      const key = 'appData_' + opt.value;
       const data = { inputList: text.trim(), currentPage: 1 };
       localStorage.setItem(key, JSON.stringify(data));
       success++;
@@ -304,7 +303,7 @@ async function syncAllFiles() {
   if (lastText) {
     inputLinksEl.value = lastText;
     dropdownEl.value = lastFile;
-    localStorage.setItem(`${PROJECT_ID}_selectedFile`, lastFile);
+    localStorage.setItem('selectedFile', lastFile);
     processLinks();
     showPage(1);
   }
@@ -312,6 +311,7 @@ async function syncAllFiles() {
   alert(`Sinkronisasi selesai.\nBerhasil: ${success}\nGagal: ${fail}\nTerakhir ditampilkan: ${lastFile}`);
 }
 
+/* === Hubungkan tombol === */
 document.getElementById('syncAllBtn').addEventListener('click', syncAllFiles);
 document.getElementById('ambilFileListLinksBtn').addEventListener('click', syncAllFiles);
 </script>
