--- a/laku/laku3.html
+++ b/laku/laku3.html
@@ -43,7 +43,7 @@
 </head>
 <body>
 
-<h1>Produk Laku di Live MadGazan</h1>
+<h1>Produk Laku di Live MadGazan V3</h1>
 <h2>Manajemen Shopee Live</h2>
 
 <textarea id="inputLinks" placeholder="Masukkan ribuan link produk Shopee, satu per baris..."></textarea>
