--- a/gabung/index.html
+++ b/gabung/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sortir Toko - Produk Live MadGazan</title>
+<title>Produk Live MadGazan</title>
 <style>
   body { font-family: Arial, sans-serif; margin: 15px; max-width: 900px; margin-inline:auto; background-color:#fffef9; }
   h1,h2,h3 { color:#b36b00; text-align:center; }
@@ -44,7 +44,7 @@
 </head>
 <body>
 
-<h1>Produk Live MadGazan</h1>
+<h1>Produk Live MadGazan 5 Oktober</h1>
 <h2>Manajemen Shopee Live</h2>
 
 <textarea id="inputLinks" placeholder="Masukkan ribuan link produk Shopee, satu per baris..."></textarea>
@@ -59,19 +59,18 @@
 <h3>Daftar File TXT Produk</h3>
 <select id="fileDropdown">
   <option value="">-- Pilih File TXT --</option>
-  <option value="satu.txt">jalb.txt</option>
-  <option value="dua.txt">rano.txt</option>
-  <option value="tiga.txt">kakfitro.txt</option>
-  <option value="empat.txt">rini.txt</option>
-  <option value="lima.txt">nurbad.txt</option>
+  <option value="jalb.txt">jalb.txt</option>
+  <option value="rano.txt">rano.txt</option>
+  <option value="indah.txt">kakfitro.txt</option>
+  <option value="rini.txt">rini.txt</option>
+  <option value="nurbad.txt">nurbad.txt</option>
 </select>
 <div class="input-buttons">
   <button id="ambilFileListLinksBtn">Download Terbaru Masal</button>
 </div>
 
 <div class="sponsor">
-  Disponsori oleh <strong>Kios Tembakau MadGazan</strong><br>
-  Solusi hemat untuk perokok bijak 🚬💨
+  Disponsori oleh <strong>MadGazan Studio</strong><br>
 </div>
 
 <div id="stats"></div>
@@ -94,7 +93,7 @@
 </div>
 
 <footer>
-  © 2025 Kios Tembakau MadGazan — Semua Hak Dilindungi
+  © 2025 MadGazan Studio — Semua Hak Dilindungi
 </footer>
 
 <script>
