--- a/lapor/index.html
+++ b/lapor/index.html
@@ -3,47 +3,98 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kirim Pesan ke Channel Telegram</title>
+<title>Laporan Kendala MadGazan Studio</title>
 <style>
   body {
-    font-family: Arial, sans-serif;
-    margin: 40px auto;
-    max-width: 500px;
+    font-family: 'Segoe UI', Arial, sans-serif;
+    background: linear-gradient(135deg, #00b4db, #0083b0);
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .card {
+    background: #ffffff;
+    padding: 25px 30px;
+    border-radius: 15px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+    width: 90%;
+    max-width: 450px;
     text-align: center;
   }
-  input, button {
-    padding: 10px;
+
+  h2 {
+    color: #0083b0;
+    margin-bottom: 20px;
+  }
+
+  textarea {
+    width: 100%;
+    height: 120px;
+    padding: 12px;
     font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    resize: none;
+    outline: none;
+    transition: all 0.2s ease-in-out;
+    font-family: inherit;
   }
-  input {
-    width: 90%;
-    margin-bottom: 10px;
+
+  textarea:focus {
+    border-color: #00b4db;
+    box-shadow: 0 0 5px rgba(0,180,219,0.4);
   }
+
   button {
+    background-color: #00b4db;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    padding: 12px 25px;
+    font-size: 16px;
+    margin-top: 15px;
     cursor: pointer;
+    transition: background 0.2s;
+  }
+
+  button:hover {
+    background-color: #0092b3;
+  }
+
+  #status {
+    margin-top: 15px;
+    font-weight: 500;
   }
 </style>
 </head>
 <body>
-  <h2>Kirim Pesan ke Channel Telegram</h2>
-  <input type="text" id="pesan" placeholder="Tulis pesan di sini..." />
-  <br>
-  <button onclick="kirimPesan()">Kirim</button>
-  <p id="status"></p>
+  <div class="card">
+    <h2>📢 Laporan Kendala MadGazan Studio</h2>
+    <textarea id="pesan" placeholder="Tulis pesanmu di sini..."></textarea>
+    <br>
+    <button onclick="kirimPesan()">Kirim Sekarang</button>
+    <p id="status"></p>
+  </div>
 
 <script>
 async function kirimPesan() {
-  const token = "8384730708:AAHjPCLYpW7wz2B5-jBxMJ17-kH1G1zXZuY";  // contoh: 123456789:ABCdefGHIjklMNOpqrSTUvwxYZ
-  const chat_id = "-1002080437836";    // contoh: @madgazan_channel
+  const token = "8384730708:AAHjPCLYpW7wz2B5-jBxMJ17-kH1G1zXZuY"; // jangan tulis token asli di sini saat publikasi
+  const chat_id = "-1002080437836"; // ID channel kamu
   const pesan = document.getElementById("pesan").value.trim();
   const status = document.getElementById("status");
 
   if (!pesan) {
     status.textContent = "⚠️ Pesan tidak boleh kosong.";
+    status.style.color = "#cc0000";
     return;
   }
 
-  status.textContent = "Mengirim...";
+  status.textContent = "⏳ Mengirim...";
+  status.style.color = "#555";
 
   const url = `https://api.telegram.org/bot${token}/sendMessage`;
 
@@ -58,12 +109,15 @@ async function kirimPesan() {
 
     if (data.ok) {
       status.textContent = "✅ Pesan terkirim ke channel!";
+      status.style.color = "#009f3c";
       document.getElementById("pesan").value = "";
     } else {
       status.textContent = "❌ Gagal: " + data.description;
+      status.style.color = "#cc0000";
     }
   } catch (err) {
     status.textContent = "🚫 Error jaringan: " + err.message;
+    status.style.color = "#cc0000";
   }
 }
 </script>
